--- a/Task1/expense-tracker/package.json
+++ b/Task1/expense-tracker/package.json
@@ -1,21 +1,23 @@
 {
-  "name": "epense-tracker",
+  "name": "expense-tracker",
   "version": "1.0.0",
-  "description": "expense-tracker-project",
+  "description": "node-app",
   "main": "./back-end/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon ./back-end/app.js"
   },
-  "author": "Ravi Chandra",
+  "author": "Ravi Chandra Kovuri",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.1",
+    "razorpay": "^2.9.2",
     "sequelize": "^6.33.0"
   }
 }
