--- a/Task1/expense-tracker/package.json
+++ b/Task1/expense-tracker/package.json
@@ -10,6 +10,7 @@
   "author": "Ravi Chandra Kovuri",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1472.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
